--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,28 @@
 <head>
   <meta charset='utf-8'>
   <title>Simple Editor</title>
-  <link rel='stylesheet' type='text/css' href='simple-editor.css'>
+  <style type='text/css'>
+    * {
+        box-sizing: border-box;
+    }
+    body {
+        font-family: Ubuntu, Helvetica, Arial, sans-serif;
+        font-size: 16px;
+        color: #888;
+        width: 800px;
+        margin: 10px auto 0 auto;
+    }
+    form .fields {
+      margin-bottom: 20px;
+      position: relative;
+    }
+    form .fields label {
+      position: absolute;
+      left: 10px;
+      top: 8px;
+    }
+  </style>
+  <link rel='stylesheet' type='text/css' href='src/simple-editor.css'>
 </head>
 <body>
 
@@ -30,7 +51,7 @@
 </form>
 
 <script type='text/javascript' src='//code.jquery.com/jquery-2.2.2.min.js'></script>
-<script type='text/javascript' src='simple-editor.js'></script>
+<script type='text/javascript' src='src/simple-editor.js'></script>
 
 </body>
 </html>
