--- a/demo.html
+++ b/demo.html
@@ -23,6 +23,20 @@
       left: 10px;
       top: 8px;
     }
+    form [type='submit'] {
+      font-family: inherit;
+      font-size: inherit;
+      text-align: center;
+      padding: 10px;
+      cursor: pointer;
+      color: inherit;
+      border: 1px solid #d1d1d1;
+      width: 100px;
+      background-color: #f1f1f1;
+    }
+    form [type='submit']:hover {
+      background-color: #f9f9f9;
+    }
   </style>
   <link rel='stylesheet' type='text/css' href='src/simple-editor.css'>
 </head>
