If textareas contain text already, copy it to the editor.

--- a/demo.html
+++ b/demo.html
@@ -50,7 +50,7 @@
     </div>
     <div class='fields'>
         <label for='requisites'>Requisites</label>
-        <textarea id='requisites' name='requisites'></textarea>
+        <textarea id='requisites' name='requisites'>Type requisites <b>here</b>!</textarea>
     </div>
     <div class='fields'>
         <label for='description'>Description</label>
@@ -58,7 +58,7 @@
     </div>
     <div class='fields'>
         <label for='notes'>Notes</label>
-        <textarea id='notes' name='notes'></textarea>
+        <textarea id='notes' name='notes'>Any <i>additional</i> notes go here!</textarea>
     </div>
 
     <input type='submit' value='Go!'>
