--- a/demopurejs.html
+++ b/demopurejs.html
@@ -50,7 +50,7 @@
     </div>
     <div class='fields'>
         <label for='requisites'>Requisites</label>
-        <textarea id='requisites' name='requisites'></textarea>
+        <textarea id='requisites' name='requisites'>Type <strong>requisites</strong> here...</textarea>
     </div>
     <div class='fields'>
         <label for='description'>Description</label>
@@ -58,7 +58,7 @@
     </div>
     <div class='fields'>
         <label for='notes'>Notes</label>
-        <textarea id='notes' name='notes'></textarea>
+        <textarea id='notes' name='notes'>Any additional notes <i>go here</i>!</textarea>
     </div>
 
     <input type='submit' value='Go!'>
